--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <scope>runtime</scope>
             <version>1.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.3</version>
+        </dependency>
     </dependencies>
 
 </project>
